# last_year_proj_1

./: Cargo.toml  README.md  nohup.out  test_candle.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci.yml  release.yml
aegis-client/: Cargo.toml
aegis-client/src/: main.rs
aegis-core/: Cargo.toml  build.rs
aegis-core/proto/: aegis.proto
aegis-core/src/: lib.rs  model.rs
aegis-server/: Cargo.toml
aegis-server/src/: main.rs
core_network/: Cargo.toml
core_network/src/: lib.rs
inference_engine/: Cargo.toml
inference_engine/src/: lib.rs
native_gui/: Cargo.toml
native_gui/src/: lib.rs
src/: main.rs
