[package]
name = "aegis-client"
version = "0.1.0"
edition = "2021"
description = "Edge Node for the Aegis federated learning framework."

[dependencies]
aegis-core = { path = "../aegis-core" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
tonic = "0.12.3"
prost = "0.13.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.82"
mdns-sd = "0.11.4"
uuid = { version = "1.23.1", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1"
eframe = "0.29.0"
