[package]
name = "aegis-core"
version = "0.1.0"
edition = "2021"
description = "Core gRPC definitions and common types for the Aegis federated learning framework."

[dependencies]
bincode = "1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
prost = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
