[package]
name = "core_network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "quic", "dns", "mdns", "kad", "macros", "noise", "yamux"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
